--- a/src/app/features/zone/pages/irrigation-zone/irrigation-zone.component.css
+++ b/src/app/features/zone/pages/irrigation-zone/irrigation-zone.component.css
@@ -108,6 +108,10 @@ h4 {
   display: flex;
   gap: 40px;
 }
+.sprinklers{
+  display: flex;
+  flex-direction: row-reverse;
+}
 
 .sensors-zone p, .sprinkler-zone p {
   color: var(--text-primary-color);
