soil moisture with web socket complete

--- a/src/app/features/reports/components/irrigation-frequency/irrigation-frequency.component.html
+++ b/src/app/features/reports/components/irrigation-frequency/irrigation-frequency.component.html
@@ -2,7 +2,7 @@
 
   <div class="zones-filter">
     @for(zone of zones; track  zone){
-      <button>{{zone}}</button>
+      <button>{{zone.name}}</button>
     }
   </div>
 
