--- a/src/app/features/zone/pages/details-zone/details-zone.component.css
+++ b/src/app/features/zone/pages/details-zone/details-zone.component.css
@@ -79,14 +79,12 @@
   margin: 2px 0;
 }
 
-
-
 button {
   padding: 8px 12px;
   border: none;
   border-radius: 4px;
   cursor: pointer;
   font-weight: bold;
-  color: #fff;
+  color: var(--text-primary-color);
 }
 
